add/delete course views

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -20,6 +20,7 @@
         <div style="flex:1">
         <p class="Link"> Course Credit {{course.course_credit}} </p>
         </div>
+        <a class="btn btn-outline-secondary add-btn" href="/add-to-courses/{{course.pk}}"> Add to course list</a>
         <div style="flex:1"><p>-------------------------------------------------</p></div>
 
     </div>
