--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -1,33 +1,174 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>{{user.username}}</title>
-</head>
-<body>
+{% extends './navbar.html' %}
 
-<h1>erasmus erasmus {{user.username}}</h1>
 
-    <a href = "{% url 'login' %}"> Login page </a>
-    {%if not courses %}
-        <h3> No Courses Yet... </h3>
-
-    {% else %}
-    {% for course in courses %}
-    <div class="cart-row">
-
-        <div style="flex:2"><p> Course Name: {{course.course_name}} </p></div>
-        <div style="flex:1"><p> Course Code: {{course.course_codes}}</p></div>
-        <div style="flex:1">
-        <p class="Link"> Course Credit {{course.course_credit}} </p>
+{% block main_content %}
+        <div class="header">Courses</div>
+        <div class="courses_taken">
+            <h2>Current Courses Taken</h2>
+            <div style="overflow-y:auto;">
+                <table id="taken_courses_table" style="width:100%">
+                    <thead>
+                    <tr>
+                        <th style="width:65px">Count</th>
+                        <th style="width:350px">Course Name</th>
+                        <th style="width:200px">Course ID</th>
+                        <th style="width:150px">ECTS Credits</th>
+                        <th style="width:370px">Taken Instead Of</th>
+                        <th style="width:370px">Remove</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for course in courses %}
+                    <tr>
+                        <td style="width:65px">1</td>
+                        <td style="width:350px">{{course.course_name}}</td>
+                        <td style="width:200px">{{course.course_codes}}</td>
+                        <td style="width:150px">{{course.course_credit}}</td>
+                        <td style="width:370px">Germany</td>
+                        <td style="width:370px"><button type="button">Remove</button></td>
+                    </tr>
+                    {%endfor%}
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                          <th>ECTS Total:</th>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
         </div>
-        <a class="btn btn-outline-secondary add-btn" href="/add-to-courses/{{course.pk}}"> Add to course list</a>
-        <div style="flex:1"><p>-------------------------------------------------</p></div>
+        <div class="add_course">
+            <h2>Add Course</h2>
+            <div class="buttons">
+                <button type="button" onclick="toggle1(this);">Add Previously Added Course</button>
+                <button type="button" onclick="toggle2(this);">Add New Course</button>
+                <button type="button" onclick="toggle3(this);">Merge Courses</button>
+            </div>
 
-    </div>
-    {%endfor%}
-    {%endif%}
+            <div style="overflow-y:auto;">
+                <table id="course_list_table" style="width:100%">
+                    <thead>
+                    <tr>
+                        <th style="width:65px">Count</th>
+                        <th style="width:350px">Course Name</th>
+                        <th style="width:200px">Course ID</th>
+                        <th style="width:150px">ECTS Credits</th>
+                        <th style="width:370px">Can Be Taken Instead Of</th>
+                        <th style="width:370px">Add</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for course in courses %}
+                    <tr>
+                        <td style="width:65px">1</td>
+                        <td style="width:350px">{{course.course_name}}</td>
+                        <td style="width:200px">{{course.course_codes}}</td>
+                        <td style="width:150px">{{course.course_credit}}</td>
+                        <td style="width:370px">Germany</td>
+                        <td style="width:370px"><button href="/add-to-courses/{{course.pk}}" type="button">Add</button></td>
+                    </tr>
+                    {%endfor%}
+                    </tbody>
+                </table>
+            </div>
 
-<img src="https://i.pinimg.com/236x/3d/a3/8c/3da38c149cf1da6823f0d7258accb637.jpg" alt="NOMMMMMMMMMMMMMMMMMMMM" width="50" height="50">
+            <form hidden="hidden" id="myform" action="/action_page.php">
+                <label for="cname">Course Name:</label><br>
+                <input type="text" id="cname" name="cname"><br>
 
-</body>
-</html>
+                <label for="cid">Course ID:</label><br>
+                <input type="text" id="cid" name="cid"><br>
+
+                <label for="ects">ECTS Credits:</label><br>
+                <input type="text" id="ects" name="ects"><br>
+
+                <label for="instead">Taken Instead Of:</label><br>
+                <input type="text" id="instead" name="instead"><br>
+
+                <label for="link">Course Syllabus Link:</label><br>
+                <input type="url" id="link" name="link"><br><br>
+
+                <input type="submit" value="Submit">
+            </form>
+
+            <div style="overflow-y:auto;">
+                <table hidden="hidden" id="taken_courses_table_merge" style="width:100%">
+                    <thead>
+                    <tr>
+                        <th style="width:65px">Count</th>
+                        <th style="width:350px">Course Name</th>
+                        <th style="width:200px">Course ID</th>
+                        <th style="width:150px">ECTS Credits</th>
+                        <th style="width:370px">Can Be Taken Instead Of</th>
+                        <th style="width:370px">Merge Selection</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td style="width:65px">1</td>
+                        <td style="width:350px">${text}</td>
+                        <td style="width:200px">Maria Anders</td>
+                        <td style="width:150px">Germany</td>
+                        <td style="width:370px">Germany</td>
+                        <td style="width:370px"><button type="button">Select</button></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <script>
+                let toggle1 = button => {
+                      let tableElement = document.getElementById("course_list_table");
+                      let takenCoursesTableElement = document.getElementById("taken_courses_table_merge");
+                      let formElement = document.getElementById("myform");
+
+                      let hidden = tableElement.getAttribute("hidden");
+                      formElement.setAttribute("hidden", "hidden");
+                      takenCoursesTableElement.setAttribute("hidden", "hidden");
+
+                      if (hidden) {
+                          tableElement.removeAttribute("hidden");
+                      } /*else {
+                          tableElement.setAttribute("hidden", "hidden");
+                      }*/
+                  }
+            </script>
+
+            <script>
+                let toggle2 = button => {
+                      let tableElement = document.getElementById("course_list_table");
+                      let takenCoursesTableElement = document.getElementById("taken_courses_table_merge");
+                      let formElement = document.getElementById("myform");
+
+                      let hidden = formElement.getAttribute("hidden");
+                      tableElement.setAttribute("hidden", "hidden");
+                      takenCoursesTableElement.setAttribute("hidden", "hidden");
+
+                      if (hidden) {
+                          formElement.removeAttribute("hidden");
+                      } /*else {
+                          formElement.setAttribute("hidden", "hidden");
+                      }*/
+                  }
+            </script>
+
+            <script>
+                let toggle3 = button => {
+                      let tableElement = document.getElementById("course_list_table");
+                      let takenCoursesTableElement = document.getElementById("taken_courses_table_merge");
+                      let formElement = document.getElementById("myform");
+
+                      let hidden = takenCoursesTableElement.getAttribute("hidden");
+                      tableElement.setAttribute("hidden", "hidden");
+                      formElement.setAttribute("hidden", "hidden");
+
+                      if (hidden) {
+                          takenCoursesTableElement.removeAttribute("hidden");
+                      } /*else {
+                          formElement.setAttribute("hidden", "hidden");
+                      }*/
+                  }
+            </script>
+            </div>
+        </div>
+{% endblock %}
