--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -22,7 +22,7 @@
         <ul>
             <li><a href="../../../../../../../Website/home.html"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-bell"></i>Notifications</a></li>
-            <li><a href="./courses.html"><i class="fas fa-book"></i>Add Courses</a></li>
+            <li><a href="../../../courses/templates/courses/courses.html"><i class="fas fa-book"></i>Add Courses</a></li>
             <li><a href="#"><i class="fas fa-project-diagram"></i>Files</a></li>
             <li><a href="#"><i class="fas fa-address-book"></i>Messages</a></li>
             <li><a href="#"><i class="fas fa-map-pin"></i>Forum</a></li>
