--- a/erasmus/src/erasmus/accounts/static/styles.css
+++ b/erasmus/src/erasmus/accounts/static/styles.css
@@ -18,10 +18,33 @@ body{
   position: relative;
 }
 
+.wrapper .upperbar{
+  background: #201f2b;
+  width: 100%;
+  height: 110px;
+  padding: 15px 0px;
+  position: absolute;
+  position: fixed;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+}
+
+.wrapper .upperbar .upperbar_content{
+  display: flex;
+  margin-left: 60px;
+}
+
+.wrapper .upperbar .upperbar_content h2{
+  z-index: 999;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  padding: 30px 60px;
+}
+
 .wrapper .sidebar{
   width: 200px;
   height: 100%;
-  background: #4b4276;
+  background: #282733;
   padding: 30px 0px;
   position: fixed;
 }
@@ -29,20 +52,23 @@ body{
 .wrapper .sidebar h2{
   color: #fff;
   text-transform: uppercase;
-  text-align: center;
+  text-align: left;
   margin-bottom: 30px;
   padding: 15px;
 }
 
+.wrapper .sidebar ul {
+  margin-top: 80px;
+}
+
 .wrapper .sidebar ul li{
   padding: 15px;
-  border-bottom: 1px solid #bdb8d7;
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: 1px solid rgba(255,255,255,0.05);
 }    
 
 .wrapper .sidebar ul li a{
-  color: #bdb8d7;
+  color: #9899ac;
   display: block;
 }
 
@@ -51,7 +77,8 @@ body{
 }
 
 .wrapper .sidebar ul li:hover{
-  background-color: #594f8d;
+  background-color: #db1430;
+  color: #fff;
 }
     
 .wrapper .sidebar ul li:hover a{
@@ -59,8 +86,14 @@ body{
 }
 
 .wrapper .main_content{
+  margin-top: 110px;
   width: 100%;
   margin-left: 200px;
+}
+
+.wrapper .main_content .page_content{
+  margin-left: 25px;
+  margin-top: 25px;
 }
 
 .wrapper .main_content .header {
@@ -95,6 +128,14 @@ thead, tbody {
   display: block;
 }
 
+thead {
+  counter-reset: section;
+}
+
+td[id="count"]::before {
+  counter-increment: section;
+  content: counter(section);
+}
 
 tbody {
     height: 300px;       /* Just for the demo          */
@@ -103,20 +144,16 @@ tbody {
 }
 
 table, th {
-  border: 1px solid #bdb8d7;
+  border: 1px solid #646c9a;
   border-collapse: collapse;
   padding: 10px;
 }
 
 td {
-  border-bottom: 1px solid #bdb8d7;
+  border-bottom: 1px solid #646c9a;
   border-collapse: collapse;
   padding: 10px;
   text-align: center;
-}
-
-td {
-
 }
 
 .wrapper .main_content .courses_taken div{
@@ -170,3 +207,4 @@ input[type=submit], select {
   border-radius: 4px;
   cursor: pointer;
 }
+
