--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -18,19 +18,25 @@
 <div class="wrapper">
     <div class="sidebar">
         {% block sidebar %}
-        <h2>Bilkent University Erasmus Application System</h2>
         <ul>
-            <li><a href="../../../../../../../Website/home.html"><i class="fas fa-home"></i>Home</a></li>
+            <li><a href="../home.html"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-bell"></i>Notifications</a></li>
-            <li><a href="../../../courses/templates/courses/courses.html"><i class="fas fa-book"></i>Add Courses</a></li>
-            <li><a href="#"><i class="fas fa-project-diagram"></i>Files</a></li>
+            <li><a href="../courses.html"><i class="fas fa-book"></i>Add Courses</a></li>
+            <li><a href="ssss"><i class="fas fa-project-diagram"></i>Files</a></li>
             <li><a href="#"><i class="fas fa-address-book"></i>Messages</a></li>
             <li><a href="#"><i class="fas fa-map-pin"></i>Forum</a></li>
 			<li><a href="#"><i class="fas fa-comment-alt"></i>FAQ</a></li>
 			<li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
-            <li><a href="#"><i class="fas fa-times"></i>Log Out</a></li>
+            <li><a href="login.html"><i class="fas fa-times"></i>Log Out</a></li>
         </ul>
         {% endblock %}
+    </div>
+
+    <div class="upperbar">
+        <div class="upperbar_content">
+            <img src="../../static/bilkent_amblem.png" width="80" height="80" alt="Bilkent Amblem">
+            <h2>Bilkent University Erasmus Application System</h2>
+        </div>
     </div>
     <div class="main_content">
         {% block main_content %} {% endblock %}
