--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -7,6 +7,7 @@
 <div class="courses_taken">
     <h2>Current Courses Taken</h2>
     <div id= "course_div" style="overflow-y:auto;">
+        <input type="text" id="myInput" onkeyup="myFunction()" style="width:100%" placeholder="Search for names..">
         <table id="taken_courses_table" style="width:100%">
             <thead>
             <tr>
