Filter is added (courses->add course section)

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -7,7 +7,6 @@
 <div class="courses_taken">
     <h2>Current Courses Taken</h2>
     <div id= "course_div" style="overflow-y:auto;">
-        <input type="text" id="myInput" onkeyup="myFunction()" style="width:100%" placeholder="Search for names..">
         <table id="taken_courses_table" style="width:100%">
             <thead>
             <tr>
@@ -48,6 +47,7 @@
     </div>
 
     <div style="overflow-y:auto;">
+        <input type="text" id="myInput" onkeyup="myFunction()" style="width:100%" placeholder="Search for courses..">
         <table id="course_list_table" style="width:100%">
             <thead>
             <tr>
