--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -46,7 +46,7 @@
         <button type="button" onclick="toggle3(this);">Merge Courses</button>
     </div>
 
-    <div style="overflow-y:auto;">
+    <div hidden="hidden" style="overflow-y:auto;" id="course_table">
         <input type="text" id="myInput" onkeyup="myFunction()" style="width:100%" placeholder="Search for courses..">
         <table id="course_list_table" style="width:100%">
             <thead>
@@ -122,7 +122,7 @@
 
     <script>
         let toggle1 = button => {
-            let tableElement = document.getElementById("course_list_table");
+            let tableElement = document.getElementById("course_table");
             let takenCoursesTableElement = document.getElementById("taken_courses_table_merge");
             let formElement = document.getElementById("myform");
 
@@ -140,7 +140,7 @@
 
     <script>
         let toggle2 = button => {
-            let tableElement = document.getElementById("course_list_table");
+            let tableElement = document.getElementById("course_table");
             let takenCoursesTableElement = document.getElementById("taken_courses_table_merge");
             let formElement = document.getElementById("myform");
 
@@ -158,7 +158,7 @@
 
     <script>
         let toggle3 = button => {
-            let tableElement = document.getElementById("course_list_table");
+            let tableElement = document.getElementById("course_table");
             let takenCoursesTableElement = document.getElementById("taken_courses_table_merge");
             let formElement = document.getElementById("myform");
 
