--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -20,9 +20,10 @@
     <div class="sidebar">
         {% block sidebar %}
         <ul>
-            <li><a href="../home.html"><i class="fas fa-home"></i>Home</a></li>
+            <li><a href="../accounts/profile/"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-bell"></i>Notifications</a></li>
-            <li><a href="../courses.html"><i class="fas fa-book"></i>Add Courses</a></li>
+            <li><a href="../../courses"><i class="fas fa-book"></i>Add Courses</a></li>
+            <li style="display:none;"><a href="../courses.html"><i class="fas fa-address-card"></i>Student List</a></li>
             <li><a href="ssss"><i class="fas fa-project-diagram"></i>Files</a></li>
             <li><a href="#"><i class="fas fa-address-book"></i>Messages</a></li>
             <li><a href="#"><i class="fas fa-map-pin"></i>Forum</a></li>
