--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -23,7 +23,7 @@
             <li><a href="../accounts/profile/"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-bell"></i>Notifications</a></li>
             <li><a href="../../courses"><i class="fas fa-book"></i>Add Courses</a></li>
-            <li style="display:none;"><a href="../courses.html"><i class="fas fa-address-card"></i>Student List</a></li>
+            <li><a href="../../courses"><i class="fas fa-address-card"></i>Student List</a></li>
             <li><a href="ssss"><i class="fas fa-project-diagram"></i>Files</a></li>
             <li><a href="#"><i class="fas fa-address-book"></i>Messages</a></li>
             <li><a href="#"><i class="fas fa-map-pin"></i>Forum</a></li>
@@ -48,7 +48,7 @@
                     <li><a href="#"><i class="fas fa-pen"></i>Change Password</a></li>
                     <li><a href="#"><i class="fas fa-inbox"></i>Change Mail</a></li>
                     <li><a href="#"><i class="fas fa-info-circle"></i>Preferences</a></li>
-                    <li><a href="#"><i class="fas fa-times"></i>Log Out</a></li>
+                    <li><a href="../../login"><i class="fas fa-times"></i>Log Out</a></li>
                 </ul>
             </div>
         </div>
