Fixed home link

--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -20,7 +20,7 @@
     <div class="sidebar">
         {% block sidebar %}
         <ul>
-            <li><a href="../accounts/profile/"><i class="fas fa-home"></i>Home</a></li>
+            <li><a href="../../accounts/profile/"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-bell"></i>Notifications</a></li>
             <li><a href="../../courses"><i class="fas fa-book"></i>Add Courses</a></li>
             <li><a href="../../courses"><i class="fas fa-address-card"></i>Student List</a></li>
