--- a/erasmus/src/erasmus/courses/templates/courses/home.html
+++ b/erasmus/src/erasmus/courses/templates/courses/home.html
@@ -1,1 +1,271 @@
 {% extends 'accounts/navbar.html' %}
+{% load crispy_forms_tags %}
+
+{% block main_content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title>login</title>
+    <!--Stylesheet-->
+    <style media="screen">
+
+*{
+	padding: 0;
+	margin: 0;
+}
+
+section
+{
+    float: left;
+    display: block;
+    width: 200px;
+    height: 370px;
+    background: rgb(246, 245, 255);
+    border-style: outset;
+    position: relative;
+    margin-left: 20px;
+}
+.mainBox
+{
+    margin-top: 3px;
+    margin-left: 10px;
+    display: block;
+    width: 1060px;
+    height: 470px;
+    background: rgb(246, 245, 255);
+    border-style: outset;
+
+    display: grid; 
+    grid-template-rows: 80px 200px;
+}
+.remove
+{
+    width: fit-content;
+}
+.flag
+{
+    width: fit-content;
+}
+.status
+{
+    display: grid;
+    grid-template-columns: 150px 100px;
+
+    margin-left: 30%;
+    margin-top: 1%;
+}
+.statusLabel
+{
+    margin-top: 14px;
+    font-size: 35px;
+}
+.statusBox
+{
+    margin-top: 5px;
+    display: block;
+    border-style: outset;
+    width: 300px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background-color: rgb(230, 234, 255);
+}
+.toDoandDone
+{
+    margin-top: 10px;
+    margin-left: 0%;
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    width: 700px;
+    height: 200px;
+    border: 0ch;
+}
+.toDo
+{   
+    display: block;
+    border-color: brown;
+    border-radius: 20px;
+    width: 500px;
+    height: 280px;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+.toDoLabel
+{
+    margin-left: 250;
+    margin-top: 20;
+}
+.done
+{
+    margin-left: 20px;
+    display: block;
+    border-color: brown;
+    border-style: outset;
+    border-radius: 20px;
+    width: 500px;
+    height: 280px;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+.doneList
+{
+    margin-left: 3%;
+    margin-top: 3%;
+}
+.doneLabel
+{
+    margin-left: 250;
+    margin-top: 20;
+}
+.addToDo
+{
+    margin-left: 420px;
+    margin-top: 10px;
+    width: fit-content;
+    border-radius: 20px;
+    color: #03535e;
+    background-color: rgb(212, 220, 255);
+}
+.addToDo:hover
+{
+    background-color: #3d445c; /* Green */
+    color: white;
+}
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 110;
+  right: 400px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container 
+{
+  max-width: 300px;
+  padding: 10px;
+  background-color: rgb(212, 220, 255);
+  border-style:ridge;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #067c8b;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel 
+{
+  background-color: rgb(0, 0, 0);
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover 
+{
+  opacity: 1;
+}
+    </style>
+
+<section class = "mainBox">
+
+    <div class = "status">
+        <h1 class = "statusLabel"> Status:</h1>
+        <div class = "statusBox">
+            <p> Status Will be shown here</p>
+        </div>
+    </div>
+
+    <section class = "toDoandDone">
+
+        <h1 class = "toDoLabel"> To Do</h1>
+        <h1 class = "doneLabel"> Done</h1>
+
+        <section class = "toDo">
+            <div class = "toDoList">
+            {% for course in courses %}
+                <p> {{course.course_name}}</p>
+            {%endfor%}
+            </div>
+        </section>
+
+        <div class = "done">
+            <form class = "doneList" action = "/action_page.php">
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="checkbox" id = "done" name = " done" value = "done">
+                <label for="vehicle1"> Done this</label><br>
+                <input type="submit" value="Submit">
+              </form>
+        </div>
+
+        <button class = "addToDo" onclick = "openForm()">Add To Do</button>
+
+        <div class = "form-popup" id = "myForm">
+        <form action = "/action_page.php" class = "form-container">
+
+            <input type="text" placeholder = "Enter To Do" name="email" required>
+
+            <button type = "submit" class = "btn">Add</button>
+            <button type = "button" class="btn cancel" onclick = "closeForm()">Close</button>
+        </form>
+        </div>
+
+        <script>
+        function openForm() 
+        {
+            document.getElementById( "myForm" ).style.display = "block";
+        }
+
+        function closeForm() 
+        {
+            document.getElementById( "myForm" ).style.display = "none";
+        }
+        </script>
+
+    </section> 
+</section>
+{% endblock %}
