--- a/erasmus/src/erasmus/accounts/static/styles.css
+++ b/erasmus/src/erasmus/accounts/static/styles.css
@@ -13,12 +13,12 @@ body{
    background-color: #f3f5f9;
 }
 
-.wrapper{
+.navbar_wrapper{
   display: flex;
   position: relative;
 }
 
-.wrapper .upperbar{
+.navbar_wrapper .upperbar{
   background: #201f2b;
   width: 100%;
   height: 110px;
@@ -28,12 +28,12 @@ body{
   border-bottom: 1px solid rgba(0,0,0,0.05);
 }
 
-.wrapper .upperbar .upperbar_content{
+.navbar_wrapper .upperbar .upperbar_content{
   display: flex;
   margin-left: 60px;
 }
 
-.wrapper .upperbar .upperbar_content .profile{
+.navbar_wrapper .upperbar .upperbar_content .profile{
   display: flex;
   align-items: center;
   gap: 20px;
@@ -44,11 +44,11 @@ body{
   margin-bottom: 30px;
 }
 
-.wrapper .upperbar .upperbar_content .profile .profile_text{
+.navbar_wrapper .upperbar .upperbar_content .profile .profile_text{
   text-align: right;
 }
 
-.wrapper .upperbar .upperbar_content .profile .profile_settings{
+.navbar_wrapper .upperbar .upperbar_content .profile .profile_settings{
   text-align: center;
   position: absolute;
   width: 300px;
@@ -60,17 +60,17 @@ body{
   border: 1px solid rgba(0,0,0,0.05);
 }
 
-.wrapper .upperbar .upperbar_content .profile li a{
+.navbar_wrapper .upperbar .upperbar_content .profile li a{
   color: #9899ac;
   display: block;
   padding: 15px;
 }
 
-.wrapper .upperbar .upperbar_content .profile:hover .profile_settings {
+.navbar_wrapper .upperbar .upperbar_content .profile:hover .profile_settings {
     display: block;
 }
 
-.wrapper .upperbar .upperbar_content h2{
+.navbar_wrapper .upperbar .upperbar_content h2{
   z-index: 999;
   color: #fff;
   text-transform: uppercase;
@@ -78,21 +78,21 @@ body{
   padding: 30px 60px;
 }
 
-.wrapper .upperbar .upperbar_content .profile ul li{
+.navbar_wrapper .upperbar .upperbar_content .profile ul li{
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: 1px solid rgba(255,255,255,0.05);
 }
 
-.wrapper .upperbar .upperbar_content .profile ul li:hover *{
+.navbar_wrapper .upperbar .upperbar_content .profile ul li:hover *{
   background-color: #db1430;
   color: #fff;
 }
 
-.wrapper .upperbar .upperbar_content .profile li a .fas{
+.navbar_wrapper .upperbar .upperbar_content .profile li a .fas{
   width: 25px;
 }
 
-.wrapper .sidebar{
+.navbar_wrapper .sidebar{
   width: 200px;
   height: 100%;
   background: #282733;
@@ -100,7 +100,7 @@ body{
   position: fixed;
 }
 
-.wrapper .sidebar h2{
+.navbar_wrapper .sidebar h2{
   color: #fff;
   text-transform: uppercase;
   text-align: left;
@@ -108,76 +108,37 @@ body{
   padding: 15px;
 }
 
-.wrapper .sidebar ul {
+.navbar_wrapper .sidebar ul {
   margin-top: 80px;
 }
 
-.wrapper .sidebar ul li{
+.navbar_wrapper .sidebar ul li{
   padding: 15px;
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: 1px solid rgba(255,255,255,0.05);
 }
 
-.wrapper .sidebar ul li a{
+.navbar_wrapper .sidebar ul li a{
   color: #9899ac;
   display: block;
 }
 
-.wrapper .sidebar ul li a{
+.navbar_wrapper .sidebar ul li a{
   color: #9899ac;
   display: block;
 }
 
-.wrapper .sidebar ul li a .fas{
+.navbar_wrapper .sidebar ul li a .fas{
   width: 25px;
 }
 
-.wrapper .sidebar ul li:hover{
+.navbar_wrapper .sidebar ul li:hover{
   background-color: #db1430;
   color: #fff;
 }
     
-.wrapper .sidebar ul li:hover a{
+.navbar_wrapper .sidebar ul li:hover a{
   color: #fff;
-}
-
-.wrapper .main_content{
-  margin-top: 110px;
-  width: 100%;
-  margin-left: 200px;
-}
-
-.wrapper .main_content .page_content{
-  margin-left: 25px;
-  margin-top: 25px;
-}
-
-.wrapper .main_content .header {
-  font-size: 40px;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 40px;
-  background: #fff;
-  color: #717171;
-  border-bottom: 1px solid #e0e4e8;
-}
-.wrapper .main_content .courses_taken h2 {
-  border-bottom: 1px solid #bdb8d7;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: 1px solid rgba(255,255,255,0.05);
-}
-
-.wrapper .main_content .courses_taken{
-  margin: 20px;
-  color: #717171;
-  line-height: 25px;
-}
-
-.wrapper .main_content .list{
-  display: flex;
-  margin: 20px;
-  color: #717171;
-  line-height: 25px;
 }
 
 input {
@@ -222,35 +183,21 @@ td {
   text-align: center;
 }
 
-.wrapper .main_content .courses_taken div{
-  display: block;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
 button{
   padding: 10px;
   font-size: 15px;
   color: #717171;
 }
 
-.wrapper .main_content .add_course .buttons {
-  display: block;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-.wrapper .main_content .add_course{
-  margin: 20px;
-  color: #717171;
-  line-height: 25px;
-
-}
-
-.wrapper .main_content .add_course h2{
-  border-bottom: 1px solid #bdb8d7;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: 1px solid rgba(255,255,255,0.05);
+input[type=submit], select {
+  width: 10%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 input[type=url], input[type=text], select {
@@ -263,14 +210,50 @@ input[type=url], input[type=text], select {
   box-sizing: border-box;
 }
 
-input[type=submit], select {
-  width: 10%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.navbar_wrapper .main_content{
+  margin-top: 110px;
+  width: 100%;
+  margin-left: 200px;
+}
+
+.navbar_wrapper .main_content .header {
+  font-size: 40px;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 40px;
+  background: #fff;
+  color: #717171;
+  border-bottom: 1px solid #e0e4e8;
+}
+
+.navbar_wrapper .main_content .page_content{
+  margin-left: 25px;
+  margin-top: 25px;
+}
+
+.navbar_wrapper .main_content .add_course .buttons {
+  display: block;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+
+.navbar_wrapper .main_content div{
+  margin: 10px;
+  color: #717171;
+  line-height: 25px;
+
+}
+
+.navbar_wrapper .main_content div h2{
+  border-bottom: 1px solid #bdb8d7;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+  border-top: 1px solid rgba(255,255,255,0.05);
+}
+
+.navbar_wrapper .main_content .courses_taken div{
+  display: block;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
