--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -76,7 +76,6 @@
             </table>
         </div>
 
-
         <form hidden="hidden" id="myform" action="/action_page.php">
 
             <label for="cname">Course Name:</label><br>
@@ -94,7 +93,7 @@
             <label for="link">Course Syllabus Link:</label><br>
             <input type="url" id="link" name="link"><br><br>
 
-            <input type="submit" value="Submit">
+            <input style="width:20%" type="submit" value="Submit">
         </form>
 
         <div style="overflow-y:auto;">
