--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -1,9 +1,32 @@
-            {% for document in documents %}
-            <tr>
-                <td style="width:65px" id="count"></td>
-                <td style="width:350px">NAME: {{document.document_name}}</td>
-                <td style="width:200px">FILE: {{document.document}}</td>
-                <td style="width:150px">DATE: {{document.date}}</td>
-
-            </tr>
-            {%endfor%}
+{% extends 'accounts/navbar.html' %}
+{% block main_content %}
+<div class="header">Files</div>
+<div class="page_content">
+    <div style="overflow-y:auto;" id="course_table">
+            <input type="text" id="myInput" onkeyup="myFunction()" style="width:100%" placeholder="Search for courses..">
+            <table id="course_list_table" style="width:100%">
+                <thead>
+                <tr>
+                    <th style="width:65px" id="count">Count</th>
+                    <th style="width:350px">Name</th>
+                    <th style="width:200px">File</th>
+                    <th style="width:150px">Date</th>
+                    <th style="width:370px">Operations</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for document in documents %}
+                <tr>
+                    <td style="width:65px" id="count"></td>
+                    <td style="width:350px">{{document.document_name}}</td>
+                    <td style="width:200px">{{document.document}}</td>
+                    <td style="width:150px">{{document.date}}</td>
+                    <td style="width:370px"><button href="#" type="button">Download</button></td>
+                    <td style="width:370px"><button href="#" type="button">Delete</button></td>
+                </tr>
+                {%endfor%}
+                </tbody>
+            </table>
+        </div>
+</div>
+{% endblock %}
