--- a/erasmus/src/erasmus/accounts/static/styles.css
+++ b/erasmus/src/erasmus/accounts/static/styles.css
@@ -171,9 +171,13 @@ tbody {
 }
 
 table, th {
-  border: 1px solid #646c9a;
-  border-collapse: collapse;
+  border-collapse: seperate;
   padding: 10px;
+}
+
+th {
+  border-bottom: 1px solid #646c9a;
+  background-color: #130d3834;
 }
 
 td {
@@ -181,6 +185,12 @@ td {
   border-collapse: collapse;
   padding: 10px;
   text-align: center;
+  background-color: #130d3834;
+
+}
+
+tr:hover {
+  background-color: #fff;
 }
 
 button{
