--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -33,7 +33,7 @@
             <li><a href="../../documents"><i class="fas fa-project-diagram"></i>Files</a></li>
             <li><a href="#"><i class="fas fa-address-book"></i>Messages</a></li>
             <li><a href="#"><i class="fas fa-map-pin"></i>Forum</a></li>
-			<li><a href="#"><i class="fas fa-question-circle"></i>FAQ</a></li>
+			<li><a href="../../faq"><i class="fas fa-question-circle"></i>FAQ</a></li>
         </ul>
         {% endblock %}
     </div>
