--- a/erasmus/src/erasmus/communication/templates/communication/faq.html
+++ b/erasmus/src/erasmus/communication/templates/communication/faq.html
@@ -4,14 +4,40 @@
 <div class="header">Frequently Asked Questions</div>
 <div class="page_content">
     <ol class="faq">
-    <li style="display: list-item">
-        <h3>Item one</h3>
-        <p>An explanation of the item.</p>
-    </li>
-    <li style="display: list-item">
-        <h3>Item two</h3>
-        <p>An explanation of the item.</p>
-    </li>
+        <li style="font-weight: bold">What is the student exchange program?
+            <p style="font-weight: normal">An important component of university education is to develop a better
+                understanding of the world, not just academically but also socially. Student exchange is a means to
+                achieve this goal by enabling students study at an environment different from their home country and
+                institution.</p><br>
+        </li>
+        <li style="font-weight: bold">What are the financial issues involved for an exchange student?
+            <p style="font-weight: normal">The university tuition/scholarship situation remains unchanged for the
+                exchange student. The student continues to receive his scholarship or pay his tuition to his home
+                institution (Bilkent University) as he would do otherwise, of the same amount.</p><br>
+            <p style="font-weight: normal">An exchange visit involves several other costs as well, such as the travel,
+                accommodation, and living expenses. These expenses can be expected roughly to be in the order of 1000
+                USD/month, although this figure may vary significantly depending on the place as well as the person.</p><br>
+            <p style="font-weight: normal">Erasmus students receive an EU support of 400 Euro/month to cover part of
+                their expenses.</p><br>
+        </li>
+        <li style="font-weight: bold">Is housing provided to exchange students at the host universities?
+            <p style="font-weight: normal">This depends on the particular host institution and their availability of
+                on-campus housing. Most universities provide some sort of housing (mostly on-campus dormitories) for a
+                certain fee.</p><br>
+        </li>
+        <li style="font-weight: bold">Who can apply for the exchange program?
+            <p style="font-weight: normal">Bilkent students who will have completed two years of study at Bilkent by
+                the time of the exchange and who satisfy the minimum GPA requirements (see question below) can apply.
+                Irregular students with an equivalent of 1.5 years of coursework may also be eligible depending on
+                the particular situation.</p><br>
+        </li>
+        <li style="font-weight: bold">Can't I go to exchange on the 4th year?
+            <p style="font-weight: normal">The ideal time for going to exchange is one's 3rd year in college, so that
+                the student will have a chance during his 4th year to complete the courses he couldn't find at the
+                host institution and will be able to graduate in time. (See the question below on the transfer of
+                courses.) A student who goes to exchange on his 4th year will most probably have to delay his
+                graduation for one or two semesters.</p><br>
+        </li>
 </ol>
 </div>
 {% endblock %}
