--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -48,8 +48,8 @@
         </div>
 
         <div hidden="hidden" id="course_table">
-            <input type="text" id="myInput" onkeyup="myFunction()" style="width:100%" placeholder="Search for courses..">
-            <table id="course_list_table" style="width:100%">
+            <input type="text" id="filter_input" onkeyup="filter()" style="width:100%" placeholder="Search for courses..">
+            <table id="filtered_list" style="width:100%">
                 <thead>
                 <tr>
                     <th style="width:65px" id="count">Count</th>
