--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -3,8 +3,8 @@
 <div class="header">Files</div>
 <div class="page_content">
     <div id="course_table">
-            <input type="text" id="myInput" onkeyup="myFunction()" style="width:100%" placeholder="Search for courses..">
-            <table id="course_list_table" style="width:100%">
+            <input type="text" id="filter_input" onkeyup="filter()" style="width:100%" placeholder="Search for courses..">
+            <table id="filtered_list" style="width:100%">
                 <thead>
                 <tr>
                     <th style="width:65px" id="count">Count</th>
