--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -54,7 +54,7 @@
                     <li><a href="#"><i class="fas fa-pen"></i>Change Password</a></li>
                     <li><a href="#"><i class="fas fa-inbox"></i>Change Mail</a></li>
                     <li><a href="#"><i class="fas fa-info-circle"></i>Preferences</a></li>
-                    <li><a href="../../login"><i class="fas fa-times"></i>Log Out</a></li>
+                    <li><a href="{% url 'logout' %}"><i class="fas fa-times"></i>Log Out</a></li>
                 </ul>
             </div>
         </div>
