--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -20,20 +20,20 @@
     <div class="sidebar">
         {% block sidebar %}
         <ul>
-            <li><a href="../../accounts/profile/"><i class="fas fa-home"></i>Home</a></li>
-            <li><a href="#"><i class="fas fa-bell"></i>Notifications</a></li>
-            {% if user_type == "Student" %}
-            <li><a href="../../courses"><i class="fas fa-book"></i>Add Courses</a></li>
-            {% elif user_type == "Coordinator" or user_ty == "BoardMember" %}
-            <li><a href="../../courses"><i class="fas fa-address-card"></i>Student List</a></li>
-            {% else %}
-            <li><a href="../../courses"><i class="fas fa-book"></i>Add Courses</a></li>
-            <li><a href="../../courses"><i class="fas fa-address-card"></i>Student List</a></li>
+            <li id="1-holder"><a id="1" href="../../accounts/profile/" onclick="clicked(this)"><i class="fas fa-home"></i>Home</a></li>
+            <li id="2-holder"><a id="2" href="#" onclick="clicked(this)"><i class="fas fa-bell"></i>Notifications</a></li>
+
+            {% if not user_type == "Coordinator" and not user_type == "BoardMember" %}
+            <li id="3-holder"><a id="3" href="../../courses" onclick="clicked(this)"><i class="fas fa-book"></i>Add Courses</a></li>
             {%endif%}
-            <li><a href="../../documents"><i class="fas fa-project-diagram"></i>Files</a></li>
-            <li><a href="#"><i class="fas fa-address-book"></i>Messages</a></li>
-            <li><a href="#"><i class="fas fa-map-pin"></i>Forum</a></li>
-			<li><a href="../../faq"><i class="fas fa-question-circle"></i>FAQ</a></li>
+            {% if not user_type == "Student" %}
+            <li id="4-holder"><a id="4" href="../../courses" onclick="clicked(this)"><i class="fas fa-address-card"></i>Student List</a></li>
+            {%endif%}
+
+            <li id="5-holder"><a id="5" href="../../documents" onclick="clicked(this)"><i class="fas fa-project-diagram"></i>Files</a></li>
+            <li id="6-holder"><a id="6" href="#" onclick="clicked(this)"><i class="fas fa-address-book"></i>Messages</a></li>
+            <li id="7-holder"><a id="7" href="#" onclick="clicked(this)"><i class="fas fa-map-pin"></i>Forum</a></li>
+			<li id="8-holder"><a id="8" href="../../faq" onclick="clicked(this)"><i class="fas fa-question-circle"></i>FAQ</a></li>
         </ul>
         {% endblock %}
     </div>
@@ -51,10 +51,10 @@
                 </div>
                 <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
                 <ul class="profile_settings">
-                    <li><a href="#"><i class="fas fa-pen"></i>Change Password</a></li>
-                    <li><a href="#"><i class="fas fa-inbox"></i>Change Mail</a></li>
-                    <li><a href="#"><i class="fas fa-info-circle"></i>Preferences</a></li>
-                    <li><a href="{% url 'logout' %}"><i class="fas fa-times"></i>Log Out</a></li>
+                    <li id="9-holder"><a id="9" href="#"><i class="fas fa-pen"></i>Change Password</a></li>
+                    <li id="10-holder"><a id="10" href="#"><i class="fas fa-inbox"></i>Change Mail</a></li>
+                    <li id="11-holder"><a id="11" href="#"><i class="fas fa-info-circle"></i>Preferences</a></li>
+                    <li id="12-holder"><a id="12" href="{% url 'logout' %}"><i class="fas fa-times"></i>Log Out</a></li>
                 </ul>
             </div>
         </div>
