--- a/erasmus/src/erasmus/communication/templates/communication/add-question.html
+++ b/erasmus/src/erasmus/communication/templates/communication/add-question.html
@@ -1,2 +1,20 @@
+{% extends 'accounts/navbar.html' %}
 
-<h1> Add QUESTION TO FAQ </h1>
+{% load static %}
+{% load crispy_forms_tags %}
+
+{% block main_content %}
+<div class="header">
+Add QUESTION TO FAQ
+</div>
+
+<div class="page_content">
+<form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{question_form|crispy}}
+        <button class="btn btn-primary my-4" type="submit">Submit</button>
+</form>
+</div>
+
+
+{% endblock %}
