--- a/erasmus/src/erasmus/communication/templates/communication/faq.html
+++ b/erasmus/src/erasmus/communication/templates/communication/faq.html
@@ -1,50 +1,20 @@
 {% extends 'accounts/navbar.html' %}
 
 {% block main_content %}
-<div class="header">
-    Frequently Asked Questions
-
-    {% if not user_type == "Student" %}
-    <button type="button" style="margin-left: 60px;" onclick="location.href = '../../add-question'">Adjust FAQs</button>
-    {% endif %}
-</div>
+<div class="header">Frequently Asked Questions</div>
 
 <div class="page_content">
+    <div class="faq_buttons">
+        {% if not user_type == "Student" %}
+        <button type="button" onclick="location.href = '../../add-question'">Add a New FAQ</button>
+        <button type="button" onclick="location.href = '#'">Adjust FAQs</button>
+        {% endif %}
+    </div>
     <ol class="faq">
-        <li style="font-weight: bold">What is the student exchange program?</li>
-            <p>An important component of university education is to develop a better
-                understanding of the world, not just academically but also socially. Student exchange is a means to
-                achieve this goal by enabling students study at an environment different from their home country and
-                institution.</p><br>
-
-        <li style="font-weight: bold">What are the financial issues involved for an exchange student?</li>
-            <p>The university tuition/scholarship situation remains unchanged for the
-                exchange student. The student continues to receive his scholarship or pay his tuition to his home
-                institution (Bilkent University) as he would do otherwise, of the same amount.</p><br>
-            <p>An exchange visit involves several other costs as well, such as the travel,
-                accommodation, and living expenses. These expenses can be expected roughly to be in the order of 1000
-                USD/month, although this figure may vary significantly depending on the place as well as the person.</p><br>
-            <p>Erasmus students receive an EU support of 400 Euro/month to cover part of
-                their expenses.</p><br>
-
-        <li style="font-weight: bold">Is housing provided to exchange students at the host universities?</li>
-           <p>This depends on the particular host institution and their availability of
-                on-campus housing. Most universities provide some sort of housing (mostly on-campus dormitories) for a
-                certain fee.</p><br>
-
-        <li style="font-weight: bold">Who can apply for the exchange program?</li>
-            <p>Bilkent students who will have completed two years of study at Bilkent by
-                the time of the exchange and who satisfy the minimum GPA requirements (see question below) can apply.
-                Irregular students with an equivalent of 1.5 years of coursework may also be eligible depending on
-                the particular situation.</p><br>
-
-        <li style="font-weight: bold">Can't I go to exchange on the 4th year?</li>
-            <p>The ideal time for going to exchange is one's 3rd year in college, so that
-                the student will have a chance during his 4th year to complete the courses he couldn't find at the
-                host institution and will be able to graduate in time. (See the question below on the transfer of
-                courses.) A student who goes to exchange on his 4th year will most probably have to delay his
-                graduation for one or two semesters.</p><br>
-
-</ol>
+        {% for q in questions %}
+        <li style="font-weight: bold">{{q.question}}</li>
+        <p>{{q.answer}}</p><br>
+        {% endfor %}
+    </ol>
 </div>
 {% endblock %}
