--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -43,7 +43,7 @@
         <h2>Add Course</h2>
         <div class="buttons">
             <button type="button" onclick="toggleButtons(this, 3)" id="1">Add Previously Added Course</button>
-            <button type="button" onclick="toggleButtons(this, 3)" id="2">Add New Course</button>
+            <button type="button" onclick="location.href = '../../add-unapproved-course/'" id="2">Add New Course</button>
             <button type="button" onclick="toggleButtons(this, 3)" id="3">Merge Courses</button>
         </div>
 
