--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -21,9 +21,11 @@
                     <td style="width:250px">{{document.document_name}}</td>
                     <td style="width:300px">{{document.document}}</td>
                     <td style="width:250px">{{document.date}}</td>
-                    <td style="width:370px;"> <button href="#" type="button">View</button> <button href="#" type="button">Download</button> <button href="#" type="button">Delete</button></td>
-
-
+                    <td style="width:370px;">
+                        <button href="#" type="button">View</button>
+                        <button href="#" type="button">Download</button>
+                        <button href="#" type="button">Delete</button>
+                    </td>
                 </tr>
                 {%endfor%}
                 </tbody>
